[gd_scene load_steps=8 format=3 uid="uid://chvmemksp6vj2"]

[ext_resource type="Script" uid="uid://dqx8hvgkier0u" path="res://scripts/ui/EquipmentScreen.gd" id="1_5a4q5"]
[ext_resource type="PackedScene" uid="uid://d4m80irnu0v7g" path="res://scenes/ui/controller/inventory_panel.tscn" id="2_3jaj2"]
[ext_resource type="Texture2D" uid="uid://b5kuya0bm55nv" path="res://assets/gfx/backgrounds/hud_background_sprite.png" id="2_rshkf"]
[ext_resource type="PackedScene" uid="uid://c75dex56tpcf7" path="res://scenes/ui/equipment_box.tscn" id="3_s35cl"]
[ext_resource type="PackedScene" uid="uid://b6n7saun334n8" path="res://scenes/ui/equip_slot_panel.tscn" id="4_s35cl"]
[ext_resource type="PackedScene" uid="uid://dlv5tsm5uecbo" path="res://scenes/ui/tooltip_panel.tscn" id="5_mrksw"]
[ext_resource type="PackedScene" uid="uid://bug7l77qgl7ep" path="res://scenes/ui/back_button.tscn" id="7_wqlw7"]

[node name="EquipmentScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5a4q5")

[node name="BackGround" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 640.0
offset_bottom = 480.0
scale = Vector2(2, 2)
texture = ExtResource("2_rshkf")
stretch_mode = 1

[node name="InventoryPanel" parent="." instance=ExtResource("2_3jaj2")]
offset_left = 789.0
offset_top = 74.0
offset_right = 801.0
offset_bottom = 74.0

[node name="EquipmentBox" parent="." instance=ExtResource("3_s35cl")]
layout_mode = 1
offset_left = 54.0
offset_top = 71.0
offset_right = 54.0
offset_bottom = 71.0

[node name="EquipSlotPanel" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 200.0
offset_right = 611.0
offset_bottom = 264.0

[node name="EquipSlotPanel2" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 280.0
offset_right = 611.0
offset_bottom = 344.0

[node name="EquipSlotPanel3" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 360.0
offset_right = 611.0
offset_bottom = 424.0

[node name="EquipSlotPanel4" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 600.0
offset_right = 611.0
offset_bottom = 664.0
allowed_type = 1

[node name="EquipSlotPanel5" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 680.0
offset_right = 611.0
offset_bottom = 744.0
allowed_type = 1

[node name="EquipSlotPanel6" parent="." instance=ExtResource("4_s35cl")]
layout_mode = 0
offset_left = 547.0
offset_top = 760.0
offset_right = 611.0
offset_bottom = 824.0
allowed_type = 1

[node name="BackButton" parent="." instance=ExtResource("7_wqlw7")]
layout_mode = 0
offset_left = 1067.0
offset_top = 824.0
offset_right = 1131.0
offset_bottom = 872.0
scale = Vector2(2, 2)

[node name="ItemTooltipPanel" parent="." instance=ExtResource("5_mrksw")]
layout_mode = 1
